# xtra

./: .gitignore  Cargo.toml  README.md  debug_receipts.txt  helpers.sh  macro_expand.rs  notes.md
benches/: freezer_export.rs  freezer_load.rs
fixtures/bodies/: bodies.0000.cdat
fixtures/headers/: headers.0000.cdat
src/: bin.rs  extract.rs  freezer.rs  helper.rs  lib.rs  main.rs  numeric.rs
src/extractor/: freezer.rs
src/freezer/: mod.rs  rlp.rs
src/freezer/rlp/: deserialize.rs  mod.rs  parse.rs
src/rlp/: mod.rs  parse.rs
src/types/: body.rs  difficulty.rs  hash.rs  header.rs  mod.rs  receipt.rs
tests/fixtures/: bodies.0000.cdat  bodies.cidx
tests/fixtures/ancient_01/: bodies.cidx
tests/fixtures/headers/: headers.cidx
