[package]
name = "xtra"
version = "0.1.0"
authors = ["thojest <thojest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
byteorder = "1"
num-bigint = { version = "0.4" , features = ["serde"] }
snap = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15"
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "freezer_load"
harness = false
