[package]
name = "xtra"
version = "0.1.0"
authors = ["th4s <th4s@metavoid.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
num-bigint = { version = "0.4" , features = ["serde"] }
snap = "1"
serde = { version = "1", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1"

[dev-dependencies]
dotenv = "0.15"

